--- a/Bip The Guy/Info.plist
+++ b/Bip The Guy/Info.plist
@@ -60,5 +60,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow the selection of images from your Library</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow for the use of camera to take images to Bip</string>
 </dict>
 </plist>
